tests/cases/compiler-development/artifact/errors/diagnostic-enum-payload-count.diagnostic
diagnostic error code=T0001 family=type message="wrong payload count for enum case 'Some'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/enum-payload-count.ari" display="tests/cases/match/errors/enum-payload-count.ari" bytes=96
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/enum-payload-count.ari" line=7 column=15 end_line=7 end_column=19 byte_start=74 byte_end=78 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/enum-payload-count.ari:7:15\n   |\n 7 |   let value = Some();\n   |               ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/enum-payload-count.ari" line=3 column=3 end_line=3 end_column=7 byte_start=27 byte_end=31 message="enum case 'Some' declares 1 payload"
  Snippet label=1 text="  --> tests/cases/match/errors/enum-payload-count.ari:3:3\n   |\n 3 |   Some(i32),\n   |   ^^^^"
  Note index=0 location=none message="constructor payload count must match the enum case declaration"
  Help index=0 location=none message="pass 1 payload to 'Some' instead of 0 payloads"
